--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     
     <!--Hobbies-->
     <div style="background-color: beige;"><b>Hobbies</b></div>
-    <a href="src=./hobbies.html" draggable="false">My hobbies</a>
+    <a href="./hobbies.html" draggable="false">My hobbies</a>
 
     <p>&copy; Mr. Code 2023 All rights reserved<p>
             
